--- a/src/components/aq-investmentpage.html
+++ b/src/components/aq-investmentpage.html
@@ -9,7 +9,7 @@
 		Polymer({
 			is:'aq-investmentpage',
 
-			attached() {
+			attached: function() {
 				this.fire('tabChanged',{tab:2});
 			},
 
