--- a/src/components/community/aq-community-postdetail-reply.html
+++ b/src/components/community/aq-community-postdetail-reply.html
@@ -1,10 +1,11 @@
-<link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel='import' href='../../icons/aq-iconset.html'>
+
 <link rel="import" href="../aq-markdown-editor.html">
 
 <dom-module id="aq-community-postdetail-reply">
 
-   <style is="custom-style" include="iron-flex iron-positioning">
+   <style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning">
    </style>
    
   <style>
@@ -34,7 +35,7 @@
   <template>
       <div id='attachButton' class="layout horizontal flex">
           <div class="flex"></div>
-          <paper-button class="self-end" raised noink on-tap='attachSelected'>Attach<iron-icon icon="editor:attach-file"></iron-icon></paper-button>
+          <paper-button class="self-end" raised noink on-tap='attachSelected'>Attach<iron-icon icon="aq-icons:attach-file"></iron-icon></paper-button>
       </div>
         
       <div id="replybox" class="flex layout vertical">
@@ -56,7 +57,6 @@
           handle-as="json" 
           on-response="onPostReplyResponse"
           on-error="onPostReplyError" 
-          last-response="{{ajaxResponse}}" 
           debounce-duration="300">
       </iron-ajax>
   </template>
@@ -64,8 +64,16 @@
   <script>
     Polymer({
       is: 'aq-community-postdetail-reply',
-      error:String,
 
+      properties:{
+        
+        header:Object,
+        error: String,
+        threadid: String,
+        threadData: Object,
+
+      },
+      
       ready: function() {
           var x = localStorage.getItem('my-app-storage');
           var user = JSON.parse(x).user;
@@ -102,11 +110,11 @@
         console.log(e);
       },
 
-      clearEditor() {
+      clearEditor: function() {
         this.$.editor.setContent("");
       },
 
-      processInput() {
+      processInput: function() {
           const markdownText = this.$$('#editor').getContent();
           this.threadData = {
               "markdownText": markdownText,
@@ -127,14 +135,14 @@
           }
       },
 
-      onPreview() { 
+      onPreview: function() { 
           this.preview = this.processInput();
           if(!this.preview) {
               this.error = "No preview available for empty reply. Please create a valid reply.";
           }
       },
 
-      onEdit() {
+      onEdit: function() {
           this.preview = false;
       },
 
