--- a/src/components/aq-aboutpage.html
+++ b/src/components/aq-aboutpage.html
@@ -1,17 +1,168 @@
 
-<dom-module id="aq-aboutpage">
-	<template>
-		  <!--aq-toolbar current-tab=3 class="paper-header" showMenu="[[computeShowMenu(narrow, showSidebar)]]"></aq-toolbar-->      
-	</template>
+<link rel="import" href="../../bower_components/app-layout/app-box/app-box.html">
+<link rel="import" href="../../bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
 
-	<script>
-		Polymer({
-			is:'aq-aboutpage',
+<link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
-			attached() {
-				this.fire('tabChanged',{tab:3});
-			},
+<link rel="import" href="../../bower_components/app-layout/app-scroll-effects/effects/parallax-background.html">
 
-		})
-	</script>
+<dom-module id="aq-aboutpage" scroll-target="tabs">
+
+  <template>
+
+    <style include="iron-flex iron-flex-alignment"></style>
+
+    <style is="custom-style">
+
+      app-box {
+        height: 640px;
+      }
+
+      .second {
+        --app-box-background-front-layer: {
+          background-image: url(../../images/bg1.jpg);
+          background-position: bottom;
+          padding-bottom: 120px;
+          margin-top: -20px;
+          height: 100%;
+        };
+      }
+
+      .third {
+        --app-box-background-front-layer: {
+          background-image: url(../../images/bg3.jpg);
+          background-position: bottom;
+          padding-bottom: 120px;
+          margin-top: -20px;
+          height: 100%;
+        };
+      }
+
+      .fourth {
+        --app-box-background-front-layer: {
+          background-image: url(../../images/bg4.jpg);
+          background-position: bottom;
+          padding-bottom: 120px;
+          margin-top: -20px;
+          height: 100%;
+        };
+      }
+
+      article.firstarticle {
+        font-weight: 100;
+        max-width: 1000px;
+        text-align: center;
+        margin: 170px auto;
+        margin-bottom:100px ;/*auto;*/
+      }
+
+      article {
+        font-weight: 100;
+        max-width: 1000px;
+        text-align: center;
+        margin: 100px auto;
+        /*margin-bottom:100px ;/*auto;*/
+      }
+      article h2 {
+        font-weight: 100;
+        font-size: 50px;
+        margin: 5px;
+      }
+      article p {
+        font-size: 18px;
+        line-height: 30px;
+      }
+
+      article hr {
+        width: 100px;
+        height: 1px;
+        border: none;
+        margin: 20px auto;
+        background-color: black;
+      }
+
+       .title {
+        color: #435966 !important;
+        font-size: 28px;
+        margin-top: 10px;
+        font-weight: bold;
+        font-family: 'Karla', sans-serif;
+        float: left;
+      }
+
+      .title span span {
+        color: #57c5a5 !important;
+      }
+
+      footer {
+        border-top: 10px solid rgba(154, 157, 160, 0.2);*/
+        bottom: 0px;
+        color: black; /* #9a9da0;*/
+        text-align: center !important;
+        padding: 19px 30px 20px;
+        position: relative;
+      }
+
+    </style>
+
+    <div>
+      <section id="section_home">
+        <article class="firstarticle">
+          <hr />
+          <h2>Investment in your Ideas</h2>
+          <p>Building an easy to use web platform to systematically research investment ideas.</p>
+        </article>
+        <app-box class ="first" effects="parallax-background" scalar = 0.5>
+          <img background src="../../images/bg1.jpg" style="width:100%; height: 900px">
+        </app-box>
+      </section>
+      
+      <section id="section_people">
+        <article>
+          <hr />
+          <h2>Who Are We</h2>
+          <p>We are bunch of Quants and Technologists who enjoy financial markets and making efficient technology. We aim to simplify investment science and filter noise from real investment ideas.</p>
+        </article>
+        <app-box class="second" effects="parallax-background"></app-box>
+      </section>
+
+      <section id="section_careers">
+        <article>
+          <hr/>
+          <h2>Work With Us</h2>
+          <p>We are recruiting highly motivated individuals interested in technology and financial markets. If you like to solve problems and build efficient technology, please apply with your resumes to
+          <a href="mailto:careers@aimsquant.com?Subject=Interested%20in%20AimsQuant" target="_top">careers@aimsquant.com</a></p>
+        </article>
+        <app-box class="third" effects="parallax-background"></app-box>
+      </section>
+
+      <section id="section_contact">
+        <article>
+          <hr/>
+          <h2>Contact Us</h2>
+          <p>We always welcome insightful thoughts, great mentors and helpful suggestions. Please write us at <a href="mailto:letstalk@aimsquant.com?Subject=Connect%20With%20AimsQuant" target="_top">connect@aimsquant.com</a></p>
+        </article>
+        <app-box class="fourth" effects="parallax-background"></app-box>
+      </section>
+    </div>
+    
+    <footer><p>© 2016 AimsQuant</p></footer>  
+    
+  </template>
+
+  <script>
+
+    Polymer({
+  		is: 'aq-aboutpage',
+
+  		attached: function() {
+			this.fire('tabChanged',{tab:3});
+		},
+
+    });
+
+  </script>
+
 </dom-module>
+
+
