--- a/src/components/aq-markdown-editor.html
+++ b/src/components/aq-markdown-editor.html
@@ -41,7 +41,7 @@
         },
       },
       
-      ready() {
+      ready: function() {
         this.simplemde = new SimpleMDE({element: this.$.MyID, toolbar:this.toolbar                              ,placeholder:this.placeHolder});
       },
     
