--- a/src/components/aq-sidebar.html
+++ b/src/components/aq-sidebar.html
@@ -1,22 +1,13 @@
 <link rel='import' href='../../bower_components/paper-header-panel/paper-header-panel.html'>
 <link rel='import' href='../../bower_components/paper-toolbar/paper-toolbar.html'>
 <link rel='import' href='../../bower_components/paper-menu/paper-menu.html'>
-<link rel='import' href='../../bower_components/paper-menu/paper-submenu.html'>
-<link rel='import' href='../../bower_components/paper-dropdown-menu/paper-dropdown-menu.html'>
-<link rel='import' href='../../bower_components/paper-listbox/paper-listbox.html'>
-
-<link rel='import' href='../../bower_components/iron-icon/iron-icon.html'>
-<link rel='import' href='../../bower_components/iron-icons/iron-icons.html'>
-<link rel='import' href='../../bower_components/iron-icons/communication-icons.html'>
-<link rel='import' href='../../bower_components/iron-icons/social-icons.html'>
-
-<link rel='import' href='../../bower_components/vaadin-icons/vaadin-icons.html'>
-<link rel='import' href='../../bower_components/iron-pages/iron-pages.html'>
 
 <link rel='import' href='../../bower_components/paper-item/paper-item.html'>
 <link rel='import' href='../../bower_components/paper-item/paper-icon-item.html'>
 <link rel='import' href='../../bower_components/paper-icon-button/paper-icon-button.html'>
 <link rel='import' href='../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
+
+<link rel='import' href='../icons/aq-iconset.html'>
 
 <dom-module id='aq-sidebar'>
   <style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning"></style>
@@ -125,7 +116,7 @@
                     selected="{{menuSelected}}" 
                     attr-for-selected="menu-panel">
           <paper-icon-item id='menu-home' menu-panel="home" on-tap="onSelected" active="{{_isEqual(menuSelected, 'home')}}">Home
-            <iron-icon item-icon icon="icons:home"></iron-icon>
+            <iron-icon item-icon icon="aq-icons:home"></iron-icon>
           </paper-icon-item>
 
           <paper-icon-item id='menu-editor' menu-panel="editor" on-tap="onSelected" active="{{_isEqual(menuSelected, 'editor')}}">Strategy Builder
@@ -133,7 +124,7 @@
           </paper-icon-item>
 
           <!--paper-icon-item id='menu-analyze' menu-panel="analyze" on-tap="onSelected" active="{{_isEqual(menuSelected, 'analyze')}}">Analyze
-            <iron-icon item-icon icon="vaadin-icons:chart"></iron-icon>
+            <iron-icon item-icon icon="aq-icons:chart"></iron-icon>
           </paper-icon-item-->
           
           <paper-icon-item menu-panel="community" on-tap="onSelected" active="{{_isEqual(menuSelected, 'community')}}">Community
@@ -160,20 +151,20 @@
         </paper-icon-item>
 
         <paper-icon-item menu-panel = 'community' action-panel='createpost' on-tap="onAction">Write a Post
-          <iron-icon item-icon icon="communication:comment"></iron-icon>
+          <iron-icon item-icon icon="aq-icons:comment"></iron-icon>
         </paper-icon-item>
         
         <paper-icon-item menu-panel = '' action-panel='sendfeedback' on-tap="onAction">Send us Feedback
-          <iron-icon item-icon icon="icons:feedback"></iron-icon>
+          <iron-icon item-icon icon="aq-icons:feedback"></iron-icon>
         </paper-icon-item>
 
         <paper-icon-item menu-panel = '' action-panel='invitefriend' on-tap="onAction">Invite a Friend
-          <iron-icon item-icon icon="social:person-add">
+          <iron-icon item-icon icon="aq-icons:person-add">
           </iron-icon>
         </paper-icon-item>
 
         <!--paper-icon-item action-panel='lockscreen' on-tap="onAction">Lock Screen
-          <iron-icon item-icon icon="vaadin-icons:lock"></iron-icon>
+          <iron-icon item-icon icon="aq-icons:lock"></iron-icon>
         </paper-icon-item-->
 
       </div>
@@ -200,23 +191,23 @@
 
     },
 
-    _isEqual(view1, view2) {
+    _isEqual: function(view1, view2) {
       return view1 == view2;
     },
     
-    toggleMenu() {
+    toggleMenu: function() {
       this.fire('close-menu');
     },
 
-    onSelected(e) {
+    onSelected: function(e) {
       this.fire('change-view-navigation', {menu: e.currentTarget.getAttribute('menu-panel')});
     },
 
-    onAction(e) {
+    onAction: function(e) {
       this.fire('change-view-action', {action: e.currentTarget.getAttribute('action-panel'), menu: e.currentTarget.getAttribute('menu-panel')});
     },  
 
-    selectPanel(newChoice){
+    selectPanel: function(newChoice){
       if (newChoice === this.selected) {
         return;
       } 
