--- a/src/components/common/aq-pagination.html
+++ b/src/components/common/aq-pagination.html
@@ -1,8 +1,12 @@
-<link rel='import' href='../../../bower_components/vaadin-icons/vaadin-icons.html'>
 <link rel='import' href='../../../bower_components/paper-icon-button/paper-icon-button.html'>
+<link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
+<link rel='import' href='../../icons/aq-iconset.html'>
 
 <dom-module id='aq-pagination'>
 	
+	<style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning">
+	</style>
+
 	<style>
 		#descriptor{
 			min-width:100px;
@@ -11,7 +15,7 @@
 
 	</style>
 	<template>
-		<div id="container" class="layout horizontal">
+		<div id="container" class="layout horizontal justified">
 			<paper-icon-button noink disabled = "[[!isPreviousPageActive(currentPage)]]" on-tap="onFirstPage" icon="vaadin-icons:angle-double-left">
 			</paper-icon-button>
 
@@ -48,21 +52,21 @@
 				},
 			},
 
-			onFirstPage() {
+			onFirstPage: function() {
 				this.currentPage = 1;
 			},
 
-			onLastPage() {
+			onLastPage: function() {
 				this.currentPage = this.pageCount;
 			},
 
-			onPreviousPage() {
+			onPreviousPage: function() {
 				if (this.currentPage > 1) {
 					this.currentPage--;
 				}
 			},
 
-			onNextPage() {
+			onNextPage: function() {
 				if (this.currentPage < this.pageCount) {
 					this.currentPage++;
 				}
