--- a/src/components/community/aq-community-createpost.html
+++ b/src/components/community/aq-community-createpost.html
@@ -1,7 +1,4 @@
-<link rel="import" href="../../../bower_components/iron-selector/iron-selector.html">
 
-<link rel="import" href="../../../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
-<link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../../bower_components/paper-button/paper-button.html">
 
@@ -10,10 +7,11 @@
 <link rel="import" href="../../dialog/aq-community-selectstrategybacktest-dialog.html">
 <link rel='import' href='../common/aq-dropdown.html'>
 <link rel='import' href='../analyze/aq-analyze-home-backtest-item.html'>
+<link rel='import' href='../../icons/aq-iconset.html'>
 
 
 <dom-module id="aq-community-createpost">
-    <style is="custom-style" include="iron-flex iron-positioning"></style>
+    <style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning"></style>
     
     <style>
       #container {
@@ -85,14 +83,14 @@
         <template is='dom-if' if="[[!preview]]">
         <div id='container' class="layout vertical flex">
             <div class="goBackButton layout horizontal">
-            <paper-icon-button noink class="self-center" title="Go Back" icon="icons:arrow-back" on-tap="goBack"></paper-icon-button>
+            <paper-icon-button noink class="self-center" title="Go Back" icon="aq-icons:arrow-back" on-tap="goBack"></paper-icon-button>
             <div class="flex"><h4>Back to Community</h4></div>
           </div>
           
             <p>Create a Post</p>
 
             <div id='attachButton'>
-            <paper-button raised noink on-tap='onAttach'>Attach<iron-icon icon="editor:attach-file"></iron-icon></paper-button>
+            <paper-button raised noink on-tap='onAttach'>Attach<iron-icon icon="aq-icons:attach-file"></iron-icon></paper-button>
             </div>
 
             <div class="layout horizontal">
@@ -126,7 +124,6 @@
             handle-as="json" 
             on-response="onPostThreadResponse" 
             on-error="onPostThreadError" 
-            last-response="{{ajaxResponse}}" 
             debounce-duration="300">
         </iron-ajax>
     </template>
@@ -136,9 +133,7 @@
         Polymer({
             is: 'aq-community-createpost',
             properties: {
-                threadData: {
-                    type: Object,
-                },
+                threadData: Object,
 
                 categories :{
                   type:Array,
@@ -154,7 +149,12 @@
                   type:Boolean,
                   value:false,
                 },
+
                 error:String,
+
+                threadData:Object,
+
+                header:Object,
             },
 
             listeners :{
@@ -173,7 +173,7 @@
                 }
             },
 
-            /*attached() {
+            /*attached: function() {
               //Write the sharing your startegy code and 
               console.log(this.id);
               console.log(this.share);  
@@ -197,15 +197,15 @@
               console.log(data);
             },
                        
-            onAttach() {
+            onAttach: function() {
               this.$.dialog.open();      
             },
 
-            goBack() {
+            goBack: function() {
               this.router.go('/dashboard/community');
             },
 
-            processInput() {
+            processInput: function() {
               const markdownText = this.$$('#editor').getContent();
               const category = this.$$('#category_dd').getSelectedValue();
               const title = this.$$('#topicInput').value;
@@ -231,11 +231,11 @@
 
             },
 
-            onPreview() { 
+            onPreview: function() { 
               this.preview = this.processInput();   
             },
 
-            onEdit() {
+            onEdit: function() {
               this.preview = false;
             },
 
