--- a/src/components/community/aq-community-home-post-item.html
+++ b/src/components/community/aq-community-home-post-item.html
@@ -1,16 +1,13 @@
-<link rel="import" href="../../../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../../../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
-<link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
-<link rel="import" href="../../../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../../../bower_components/iron-icons/maps-icons.html">
 <link rel='import' href='../profile-img.html'>
+<link rel='import' href='../../icons/aq-iconset.html'>
 
 <dom-module id="aq-community-home-post-item">
-  <style is="custom-style" include="iron-flex iron-positioning iron-flex-alignment"></style>
+  <style is="custom-style" include="iron-flex iron-positioning iron-flex-alignment">
+  </style>
 
   <style>
-    .post-container {
+    #post-container {
       max-width: 900px;
       border-bottom: 1px solid #e5e5e5;--#80CBC4;--#666;
       margin-top: 10px;
@@ -19,7 +16,7 @@
       margin-bottom: 30px;
     }
 
-    .post-container:hover {
+    #post-container:hover {
       --background-color:#e5f1f5
     }
 
@@ -32,7 +29,7 @@
     }
 
 
-    #author-name {
+    #author-name span{
       --color: teal;
       font-size: 15px;
     }
@@ -91,14 +88,12 @@
 
   </style>
   <template>
-  	<div class="post-container layout horizontal" id='post-container'>
+  	<div class="layout horizontal flex" id='post-container'>
       <profile-img letter="[[getInitials(authorFirstname, authorLastname)]]"></profile-img>
       <div>
 	        <div id='postText' on-tap='onView'><a href$="[[topicAddress]]">[[topicHeading]]</a></div>
-          <!--a href$="[[authoraddress]]"-->
-            <span id="author-name">[[authorFirstname]] [[authorLastname]]</span>
-          <!--/a-->
-          <span id="date"><i>   on [[postDate]]</i></span>
+            <div id="author-name" class="layout horizontal"><span>[[authorFirstname]]</span><span>&nbsp[[authorLastname]]</span>
+          <span id="date"><i>&nbsp on [[postDate]]</i></span> </div>
       </div>
 
       <div class="flex"></div>
@@ -137,6 +132,7 @@
         totalViews: String,
         postCategory: String,
         itemId:String,
+        header: Object,
       },
 
       listeners:{
@@ -153,11 +149,11 @@
           }
       },
 
-      getInitials(firstName, lastName) {
+      getInitials: function(firstName, lastName) {
         return firstName.charAt(0) + lastName.charAt(0);
       },
 
-      onView() {
+      onView: function() {
         this.$.views.generateRequest();
       },
 
