--- a/src/components/community/aq-community-home-searchbar.html
+++ b/src/components/community/aq-community-home-searchbar.html
@@ -1,15 +1,9 @@
-<link rel='import' href='../../../bower_components/iron-icon/iron-icon.html'>
-<link rel='import' href='../../../bower_components/iron-icons/iron-icons.html'>
-<link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
-<link rel='import' href='../../../bower_components/paper-menu/paper-menu.html'>
-<link rel='import' href='../../../bower_components/paper-item/paper-item.html'>
-<link rel='import' href='../../../bower_components/paper-menu-button/paper-menu-button.html'>
-<link rel='import' href='../../../bower_components/paper-button/paper-button.html'>
-<link rel='import' href='../../../bower_components/paper-icon-button/paper-icon-button.html'>
 
+<link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 
 <dom-module id='aq-community-home-searchbar'>
-	<style is="custom-style" include="iron-flex iron-positioning"></style>
+	<style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning">
+	</style>
   
 	<style>
 
@@ -122,11 +116,11 @@
 				},
 			},
 
-			ready() {
+			ready: function() {
 				//this.categories = categories;
 			},
 
-			onSearch(e) {
+			onSearch: function(e) {
 				
                 this.fire('search-action', {text: this.searchValue, category: this.$.category_dd.getSelectedValue()});
            
