--- a/src/components/community/aq-community-postdetail-content.html
+++ b/src/components/community/aq-community-postdetail-content.html
@@ -1,10 +1,4 @@
-<link rel="import" href="../../../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../../../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
-<link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
-<link rel="import" href="../../../bower_components/paper-checkbox/paper-checkbox.html">
-<link rel="import" href="../../../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../../../bower_components/iron-icons/maps-icons.html">
 <link rel="import" href="../../../bower_components/marked-element/marked-element.html">
 
 
@@ -12,6 +6,10 @@
 <link rel="import" href="../profile-img.html">
 
 <dom-module id="aq-community-postdetail-content">
+   
+    <style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning">
+    </style>
+   
    <style>
     :host {
       display:block;
@@ -95,11 +93,11 @@
           
       },
 
-      getinitials(item) {
+      getinitials: function(item) {
         return item.user.firstName[0] + item.user.lastName[0];
       },
 
-      format(date) {
+      format: function(date) {
           return new Date(date).toLocaleTimeString("en-us", options);
       },
 
