--- a/src/components/community/aq-community-postdetail-header.html
+++ b/src/components/community/aq-community-postdetail-header.html
@@ -1,17 +1,15 @@
-<link rel="import" href="../../../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../../../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
 <link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
-<link rel="import" href="../../../bower_components/paper-checkbox/paper-checkbox.html">
-<link rel="import" href="../../../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../../../bower_components/iron-icons/maps-icons.html">
-<link rel="import" href="../../../bower_components/marked-element/marked-element.html">
 
 <link rel="import" href="./aq-community-postdetail-content.html">
-
 <link rel="import" href="../profile-img.html">
+<link rel='import' href='../../icons/aq-iconset.html'>
 
 <dom-module id="aq-community-postdetail-header">
+   
+    <style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning">
+    </style>
+
    <style>
     :host {
       display:block;
@@ -70,8 +68,7 @@
       <div class="layout horizontal">
         <span id='category' class="self-top"><i>[[postHeader.category]]</i></span>
         <div class="flex"></div>
-        <paper-icon-button title="Follow" icon="vaadin-icons:megafone" on-tap='onFollow'></paper-icon-button>
-        <!--paper-icon-button title="Share" icon="vaadin-icons:share-square"></paper-icon-button-->
+        <paper-icon-button title="Follow" icon="aq-icons:megafone" on-tap='onFollow'></paper-icon-button>
       </div>
 
       <aq-community-postdetail-content item="[[postHeader]]"></aq-community-postdetail-content>
@@ -95,6 +92,7 @@
 
       properties :{
         postHeader: Object,
+        header:Object,
       },
 
       ready: function() {
@@ -107,7 +105,7 @@
           }
       },
 
-      onFollow() {
+      onFollow: function() {
         if(!this.header) {
           this.router.go('/user/signin', {lastRequest:('/dashboard/community/topics/[[postHeader._id]]')});
           return;
