--- a/src/components/community/aq-community-postdetail.html
+++ b/src/components/community/aq-community-postdetail.html
@@ -1,19 +1,19 @@
-<link rel="import" href="../../../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../../../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
 <link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 <link rel="import" href="../../../bower_components/paper-checkbox/paper-checkbox.html">
 <link rel="import" href="../../../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../../../bower_components/iron-icons/maps-icons.html">
 
 <link rel="import" href="./aq-community-postdetail-header.html">
 
 <link rel="import" href="./aq-community-postdetail-content.html">
 <link rel="import" href="./aq-community-postdetail-reply.html">
-
+<link rel='import' href='../../icons/aq-iconset.html'>
 
 <dom-module id="aq-community-postdetail">
 
+    <style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning">
+    </style>
+   
    <style>
     #container {
       width:90%;
@@ -51,7 +51,7 @@
         <div id='container'>
           
           <div class="goBackButton layout horizontal">
-            <paper-icon-button noink class="self-center" title="Go Back" icon="icons:arrow-back" on-tap="goBack"></paper-icon-button>
+            <paper-icon-button noink class="self-center" title="Go Back" icon="aq-icons:arrow-back" on-tap="goBack"></paper-icon-button>
             <div class="flex"><p>Back to Community</p></div>
           </div>
           
@@ -67,7 +67,7 @@
             </template>
           </div>
           
-          <aq-community-postdetail-reply id="replyEditor" threadid={{threadDetails._id}}></aq-community-postdetail-reply>
+          <aq-community-postdetail-reply id="replyEditor" threadid="[[threadDetails._id]]"></aq-community-postdetail-reply>
         </div>
       </template>
 
@@ -77,9 +77,15 @@
     Polymer ({
       is: 'aq-community-postdetail',
       properties: {
-        threadid: {
-          type: String
-        }
+        
+        threadid: String,
+        
+        header: Object,
+
+        user:Object,
+
+        threadDetails:Object,
+
       },
 
       listeners :{
@@ -87,11 +93,11 @@
         'reply-added':'addReply',
       },
 
-      onGetThreadDetailResponse(data) {
+      onGetThreadDetailResponse: function(data) {
           this.threadDetails = data.detail.response;
       },
 
-      onGetThreadDetailError(data) {
+      onGetThreadDetailError: function(data) {
           console.log(data);
       },
 
@@ -103,17 +109,15 @@
               "aimsquant-token": user.token,
               "Content-Type": "application/json"};  
           }
-          this.firstName = user.firstName;
-          this.lastName = user.lastName;
-          this.email = user.email;
-          this.letter = this.firstName[0];
+
+          this.user = user;
       },
 
-      goBack() {
+      goBack: function() {
           this.router.go('/dashboard/community');
       },
 
-      addReply(e) {
+      addReply: function(e) {
         
         var reply = e.detail.reply;
         var replyElement = document.createElement('aq-community-postdetail-content');
@@ -121,7 +125,7 @@
         //var x = localStorage.getItem('my-app-storage');
         //var user = JSON.parse(x).user;
 
-        reply.user = {"firstName":this.firstName, "lastName":this.lastName};
+        reply.user = {"firstName":this.user.firstName, "lastName":this.user.lastName};
         
         replyElement.item = reply;
 
