--- a/src/components/community/aq-community-previewpost.html
+++ b/src/components/community/aq-community-previewpost.html
@@ -1,8 +1,4 @@
 
-<link rel="import" href="../../../bower_components/iron-selector/iron-selector.html">
-
-<link rel="import" href="../../../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
-<link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../../bower_components/paper-button/paper-button.html">
 
@@ -10,9 +6,11 @@
 
 <link rel="import" href="./aq-community-postdetail-header.html">
 
-<style is="custom-style" include="iron-flex iron-positioning"></style>
-
 <dom-module id="aq-community-previewpost">
+    
+    <style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning">
+    </style>
+
     <style>
         #previewContainer {
             width:90%; 
@@ -65,28 +63,18 @@
         properties :{
           
           threadData:Object,
-          /*header :{
-            type:String,
-           },
-            category:{
-            type:String,
-           },
-            content:{
-              type:String,
-            },
 
-          },*/
         },
 
-        attached () {
+        attached: function() {
             console.log(this.threadData);
         },
         
-        onEdit() {
+        onEdit: function() {
           this.fire('edit-clicked');
         },
 
-        onSubmit() {
+        onSubmit: function() {
             this.fire('submit-clicked');
         },
 
