--- a/src/components/editor/aq-editor-console-window.html
+++ b/src/components/editor/aq-editor-console-window.html
@@ -1,5 +1,4 @@
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
-<link rel="import" href="../../../bower_components/iron-collapse/iron-collapse.html">
 <link rel="import" href="../../../bower_components/paper-header-panel/paper-header-panel.html">
 <link rel="import" href="../../../bower_components/paper-toolbar/paper-toolbar.html">
 <link rel="import" href="../../../bower_components/paper-tabs/paper-tabs.html">
@@ -8,7 +7,7 @@
 
 <dom-module id='aq-editor-console-window'>
 
-	<style is="custom-style" include="iron-flex iron-positioning"></style>
+	<style is="custom-style" include="iron-flex iron-flex-alignment  iron-positioning"></style>
 	<style>
 		
 		paper-icon-button {
@@ -41,9 +40,9 @@
 	          	</paper-tabs>
 
 	          	<div class="flex"></div>
-	          	<paper-icon-button noink icon="vaadin-icons:angle-down" title="Minimize" 
+	          	<paper-icon-button noink icon="aq-icons:angle-down" title="Minimize" 
 	          				     on-tap="closeConsole"></paper-icon-button>
-	          	<paper-icon-button noink icon="vaadin-icons:angle-up" title="Maximize">
+	          	<paper-icon-button noink icon="aq-icons:angle-up" title="Maximize">
 			    </paper-icon-button>
 
 	        </paper-toolbar>
@@ -57,7 +56,7 @@
 		Polymer({
 			is: 'aq-editor-console-window',
 
-			closeConsole() {
+			closeConsole: function() {
 				this.fire('close-console');
 			},
 
