--- a/src/components/editor/aq-editor-edit-backtest-screen.html
+++ b/src/components/editor/aq-editor-edit-backtest-screen.html
@@ -1,20 +1,23 @@
 
 <link rel='import' href ="../common/aq-backtest-detail-item.html">
 <link rel='import' href='../../../bower_components/web-socket/web-socket.html'>
+<link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
+
+<link rel='import' href='../../icons/aq-iconset.html'>
+
 
 <dom-module id='aq-editor-edit-backtest-screen'>
-	<style>
-	</style>
+	<style is="custom-style" include="iron-flex iron-flex-alignment  iron-positioning"></style>
 
 	<template>
 		<div class="goBackButton layout horizontal">
-            <paper-icon-button noink class="self-center" title="Go Back" icon="icons:arrow-back" on-tap="onBack">
+            <paper-icon-button noink class="self-center" title="Go Back" icon="aq-icons:arrow-back" on-tap="onBack">
             </paper-icon-button>
             <h3>Back to Strategy</h3>
             <div class="flex"></div>
          	
          	<template is='dom-if' if='[[narrow]]'>
-         		<paper-icon-button noink class="toolbarIcon" icon="vaadin-icons:split-h" title="Toggle-Left" on-tap="toggleDrawer">
+         		<paper-icon-button noink class="toolbarIcon" icon="aq-icons:split-h" title="Toggle-Left" on-tap="toggleDrawer">
          		</paper-icon-button>
          	</template>
 
@@ -50,7 +53,7 @@
 				},
 			},
 
-			_isActiveChanged(newValue, oldValue) {
+			_isActiveChanged: function(newValue, oldValue) {
 				if (newValue) {
 					this.debounce('start', function() {
 						this.start();
@@ -60,44 +63,44 @@
 				}
 			},
 
-			start() {
+			start: function() {
 				console.log("Starting Websocket:");	
         		this.$.webSocketConn.open();
 			},
 
-			stop() {
+			stop: function() {
 				console.log("Stopping Websocket");	
         		this.$.webSocketConn.close();
 			},
 
-			_onOpen(e){
+			_onOpen: function(e){
 		        console.log("Open");
 		        this.$.backtestDisplay.reset();
 		        this.$.webSocketConn.send("run");
 	      	},
 
-	      	_onMessage(e) {    
+	      	_onMessage: function(e) {    
 	          	if (e.detail.outputtype == "performance") {
 	            	this.$.backtestDisplay.addLineData(e.detail);
 	          	}
 	      	},
 
-      		_onError(e) {
+      		_onError: function(e) {
       			console.log(e.detail);
         		console.log("Error");
         			
   			},
 
-      		_onClose(e) {
+      		_onClose: function(e) {
         		console.log("Close:");
       		},
 
-			onBack() {
+			onBack: function() {
 				this.isActive = false;
 				this.fire('backClicked-backtest');
 			},
 
-			toggleDrawer() {
+			toggleDrawer: function() {
 				this.fire('toggle-drawer');
 			},
 
