--- a/src/components/editor/aq-editor-edit-programmer.html
+++ b/src/components/editor/aq-editor-edit-programmer.html
@@ -1,23 +1,7 @@
 
-<link rel="import" href="../../../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../../../bower_components/iron-collapse/iron-collapse.html">
 
-<link rel="import" href="../../../bower_components/paper-header-panel/paper-header-panel.html">
-<link rel="import" href="../../../bower_components/paper-toolbar/paper-toolbar.html">
-
 <link rel="import" href="../../../bower_components/juicy-ace-editor/juicy-ace-editor.html">
-<link rel="import" href="../../../bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="../../../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../../../bower_components/iron-icons/av-icons.html">
-<link rel="import" href="../../../bower_components/iron-icons/editor-icons.html">
-
-<link rel="import" href="../../../bower_components/paper-input/paper-input.html">
-<link rel="import" href="../../../bower_components/paper-tabs/paper-tabs.html">
-
-<link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html">
-
-<link rel="import" href="../../../bower_components/paper-input/paper-input-container.html">
-<link rel="import" href="../../../bower_components/paper-button/paper-button.html">
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 
 <link rel='import' href ="./aq-editor-toolbar.html">
@@ -25,6 +9,7 @@
 <link rel='import' href ="./aq-editor-sidebar-run.html">
 
 <dom-module id="aq-editor-edit-programmer">
+<style is="custom-style" include="iron-flex iron-flex-alignment  iron-positioning"></style>
 
 <style>
 
@@ -35,11 +20,6 @@
       -webkit-user-select: none;
       -moz-user-select: none;
     }
-
-  paper-icon-button {
-    width:35px;
-    height:35px;
-  }
 
   #consoleWindow {
     position: absolute;
@@ -53,74 +33,15 @@
     background-color: white;
   }
 
-    
-    text-area {
-      left:-120 !important;
-    }
-
-    paper-header-panel {
-      background-color:  #e5f1f5;--white;--#333a56;
-      color:#333a56;
-      --border: 1px solid #333a56;
-      border-bottom: 1px solid #333a56;
-      opacity: 1;
-      z-index: 3;
-    }
-
-    .toolbarPlayIcon {
-       border:1px solid;
-       padding:0px;
-       height:23px;
-       width:35px;
-    }
-
-    .toolbarPlayIcon:active {
-       padding:3px;
-    }
-
-    paper-button {
-      border:1px white;
-    }
-
-   
-
 </style>
 
 <style is="custom-style" include="iron-flex iron-positioning"></style>
 
   <template>
-  
-      <!--paper-drawer-panel drawer-width='560px' responsive-width='1000px' class="drawerpanel" id="drawerpanel" right-drawer force-narrow="{{!showSideBar}}"-->
        <div class="fit"> 
         <juicy-ace-editor style="height:100%;" theme="ace/theme/monokai" mode="ace/mode/julia" fontsize="14px" id="codeEditor" tabsize="4">{{code}}
         </juicy-ace-editor>  
         </div>
-
-        <!--paper-header-panel drawer mode="seamed">
-          <paper-toolbar>
-              <paper-tabs selected="{{selectedSidebar}}" noink>
-                <paper-tab>Run</paper-tab>
-                <paper-tab>Quick Help</paper-tab>
-              </paper-tabs>
-
-              <div class="flex"></div>
-              
-              <template is='dom-if' 
-                        if="[[isSelectedBarRun(selectedSidebar)]]">
-                <paper-icon-button id='runButton' noink title="Run Backtest" on-tap='onRun' class="toolbarPlayIcon" icon="av:play-arrow"></paper-icon-button>
-              </template>
-
-          </paper-toolbar>
-
-            <iron-pages selected="{{selectedSidebar}}">
-           
-              <aq-editor-sidebar-run></aq-editor-sidebar-run>  
-              <div>This is quick help!!</div>
-              
-            </iron-pages>
-        
-        </paper-header-panel-->
-      <!--/paper-drawer-panel-->  
 
       <iron-collapse id='collapse'>
         <aq-editor-console-window id="consoleWindow" class="collapse-content"></aq-editor-console-window>
@@ -140,11 +61,11 @@
         'editor-ready':'setCode',
       },
 
-      getCodeContent() {
+      getCodeContent: function() {
         return this.$.codeEditor.value; 
       }, 
 
-      isSelectedBarRun(sideBar) {
+      isSelectedBarRun: function(sideBar) {
         return sideBar == 0;
       },    
 
