--- a/src/components/editor/aq-editor-home-menu.html
+++ b/src/components/editor/aq-editor-home-menu.html
@@ -1,11 +1,10 @@
 
-<link rel='import' href='../../../bower_components/iron-icon/iron-icon.html'>
-<link rel='import' href='../../../bower_components/iron-icons/iron-icons.html'>
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
+<link rel='import' href='../../icons/aq-iconset.html'>
 
 
 <dom-module id='aq-editor-home-menu'>
-	<style is="custom-style" include="iron-flex iron-positioning"></style>
+	<style is="custom-style" include="iron-flex iron-flex-alignment  iron-positioning"></style>
   
 	<style>
 
@@ -123,24 +122,21 @@
 	    
 	    	<div class="flex self-center"><p>All Strategies</p></div>
 	      	<div id="search" class="flex">	    	
-	    		<paper-icon-button noink title="Go Back" icon="arrow-back" on-tap="toggle"></paper-icon-button>
+	    		<paper-icon-button noink title="Go Back" icon="aq-icons:arrow-back" on-tap="toggle"></paper-icon-button>
       			<input id="searchbox" placeholder="Search your strategy" class="flex"
-             	value="{{searchValue::change}}" type="search"
+             	value="{{searchText::change}}" type="search"
              	on-keydown="checkForKeys" on-blur='blur' on-search='search'>
         	</div>
 
 	      	<div id='menu-icons' class="layout horizontal">
-	      		<paper-icon-button noink class="iconButton" title="Search" icon="icons:search" on-tap="toggle" raised>	
+	      		<paper-icon-button noink class="iconButton" title="Search" icon="aq-icons:search" on-tap="toggle" raised>	
 	      		</paper-icon-button>
 
-	      		<paper-icon-button noink class="iconButton" title="New" icon="icons:add" on-tap="createNew">	
+	      		<paper-icon-button noink class="iconButton" title="New" icon="aq-icons:add" on-tap="createNew">	
 	      		</paper-icon-button>
 
-	  			<paper-icon-button noink class="iconButton" title="Delete" icon="icons:delete" on-tap="onDelete" disabled="[[!activeDelete]]">
+	  			<paper-icon-button noink class="iconButton" title="Delete" icon="aq-icons:delete" on-tap="onDelete" disabled="[[!activeDelete]]">
 	  			</paper-icon-button>
-
-				<!--paper-icon-button noink class="iconButton" title="Compare" icon="icons:chrome-reader-mode" on-tap="onCompare">
-				</paper-icon-button-->
 			</div>      	
   		</div>
 
@@ -162,7 +158,7 @@
 				},
 			},
 
-			toggle() {
+			toggle: function() {
 				var d = this.$$('#search').style.display;
 				if(d == 'block') {
 					this.$$('#search').style.display = 'none';
@@ -175,19 +171,19 @@
 				}			
 			},
 
-			onDelete() {
+			onDelete: function() {
 				this.fire('deleteClicked');
 			},
 
-			createNew() {
+			createNew: function() {
 				this.fire('newClicked');
 			},
 
-			onCompare() {
+			onCompare: function() {
 				this.fire('compareClicked');
 			},
 
-			checkForKeys: function (e) {
+			checkForKeys: function(e) {
                 // check if 'esc' was pressed
                 if (e.keyCode === 27) {
                     this.$$('#search').style.display = 'none';
@@ -195,14 +191,14 @@
                 } 
             },
 
-            blur() {
+            blur: function() {
             	if(this.$$('#searchbox').value=="") {
             		this.$$('#search').style.display = 'none';
 					this.$$('#menu-icons').style.display = 'inline';
 				} 
             },
 
-            search() {
+            search: function() {
             	this.searchText = this.$$('#searchbox').value;
             	this.fire('search-action',{searchtext: this.searchText});
             },
