--- a/src/components/editor/aq-editor-sidebar-run.html
+++ b/src/components/editor/aq-editor-sidebar-run.html
@@ -1,20 +1,7 @@
-<!--aq-editor-sidebar-run></aq-editor-sidebar-run-->
-
-<link rel="import" href="../../../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../../../bower_components/iron-icons/av-icons.html">
-<link rel="import" href="../../../bower_components/iron-icons/editor-icons.html">
-<link rel="import" href="../../../bower_components/vaadin-icons/vaadin-icons.html">
-
-<link rel="import" href="../../../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../../../bower_components/paper-input/paper-input.html">
-<link rel="import" href="../../../bower_components/paper-input/paper-textarea.html">
-<link rel="import" href="../../../bower_components/paper-tabs/paper-tabs.html">
-<link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 
-
 <dom-module id='aq-editor-sidebar-run'>
-	<style is="custom-style" include="iron-flex iron-positioning"></style>
+	<style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning"></style>
 
 	<style>
 		
@@ -160,34 +147,23 @@
 						
 						<span class="input-span">Start Date</span>
 						
-			    		<!--iron-icon icon="vaadin-icons:calendar"></iron-icon-->
-		      			<input id="box" placeholder="Start Date"
-		             	value="{{startDateValue::change}}" type="date"
+			    		<input id="box" placeholder="Start Date"
+		             	value="{{startDate::change}}" type="date"
 		             	on-keydown="checkForKeys" on-blur='close'>
 		        	</div>
 
 		        	<div class="inputbox">	
 						<span class="input-span">End Date</span> 	
-			    		<!--iron-icon icon="vaadin-icons:calendar"></iron-icon-->
-		      			<input id="box" placeholder="Start Date"
-		             	value="{{endDateValue::change}}" type="date"
+			    		<input id="box" placeholder="Start Date"
+		             	value="{{endDate::change}}" type="date"
 		             	on-keydown="checkForKeys" on-blur='close'>
 		        	</div>
 		    		<div class="inputbox">	
 						<span class="input-span">Initial Capital</span> 	
-			    		<!--iron-icon icon="vaadin-icons:calendar"></iron-icon-->
-			  			<input id="box" placeholder="Seed Capital"
-			         	value="{{initialCashValue::change}}" type="number"
+			    		<input id="box" placeholder="Seed Capital"
+			         	value="{{initialCash::change}}" type="number"
 			         	on-keydown="checkForKeys" on-blur='close'>
 			    	</div>
-
-			    	<!--div class="inputbox">	
-						<span>Plan:</span> 	
-			    		<!--iron-icon icon="vaadin-icons:calendar"></iron-icon-->
-			  			<!--input id="plan-box" placeholder="Investment Plan"
-			         	value="{{searchValue::change}}" type="text"
-			         	on-keydown="checkForKeys" on-blur='close'>
-			    	</div-->
 		    	</div>
 
 			</div>
@@ -210,21 +186,21 @@
 						<div class="inputbox">	
 							<span class="input-span">Rebalance</span> 	
 				    		<input id="box" placeholder="Rebalance Frequency"
-			             	value="{{rebalanceValue::change}}" type="text"
+			             	value="{{rebalance::change}}" type="text"
 			             	on-keydown="checkForKeys" on-blur='close'>
 		        		</div>
 
 		        		<div class="inputbox">	
 							<span class="input-span">Cancel Policy</span> 	
 				    		<input id="box" placeholder="Cancel Policy"
-			             	value="{{cancelPolicyValue::change}}" type="text"
+			             	value="{{cancelPolicy::change}}" type="text"
 			             	on-keydown="checkForKeys" on-blur='close'>
 		        		</div>
 
 		        		<div class="inputbox">	
 							<span class="input-span">Resolution</span> 	
 				    		<input id="box" placeholder="Resolution"
-			             	value="{{resolutionValue::change}}" type="text"
+			             	value="{{resolution::change}}" type="text"
 			             	on-keydown="checkForKeys" on-blur='close'>
 		        		</div>
 	        		</div>
@@ -233,59 +209,51 @@
 				
 			    		<div class="inputbox">	
 							<span class="input-span">Commission</span> 	
-				    		<!--iron-icon icon="vaadin-icons:calendar"></iron-icon-->
-			      			<input id="box" placeholder="Commission"
-			             	value="{{commissionValue::change}}" type="text"
+				    		<input id="box" placeholder="Commission"
+			             	value="{{commission::change}}" type="text"
 			             	on-keydown="checkForKeys" on-blur='close'>
 
 		        		</div>
 
 			        	<div class="inputbox">	
 							<span class="input-span">Slippage</span> 	
-				    		<!--iron-icon icon="vaadin-icons:calendar"></iron-icon-->
-			      			<input id="box" placeholder="Slippage"
-			             	value="{{slippageValue::change}}" type="number"
+				    		<input id="box" placeholder="Slippage"
+			             	value="{{slippage::change}}" type="number"
 			             	on-keydown="checkForKeys" on-blur='close'>
 
-			             	<!--input id="dt-box" placeholder="Value"
-			             	value="{{searchValue::change}}" type="number"
-			             	on-keydown="checkForKeys" on-blur='close'-->
 			        	</div>
 			    	</div>
 		    	</div>
 
-			    	<!--div id='extra-settings' >
-						
-						<div id='heading'><span>Slippage Settings</span></div>
-						<div class="layout horizontal">
-							<div class="inputbox">	
-								<span>Model:</span> 	
-
-				      			<input id="rebalance-box" placeholder="Model"
-				             	value="{{searchValue::change}}" type="text"
-				             	on-keydown="checkForKeys" on-blur='close'>
-			        		</div>
-
-				        	<div class="inputbox">	
-								<span>Value:</span> 	
-					    		
-				      			<input id="dt-box" placeholder="Value"
-				             	value="{{searchValue::change}}" type="number"
-				             	on-keydown="checkForKeys" on-blur='close'>
-				        	</div>
-				    	</div>
-			    	</div-->
-		    	<!--/iron-collapse-->
 			</div>
 
-			<!--paper-button noink raised class="flex">Start Backtest</paper-button-->	
+			
 	</template>
 
 	<script>
 		Polymer({
 			is:'aq-editor-sidebar-run',
 
-			toggle() {
+			properties:{
+				startDate:Date,
+
+				endDate:Date,
+
+				initialCash:Number,
+
+				rebalance:String,
+
+				cancelPolicy: String,
+
+				slippage: Number,
+
+				commission: String,
+
+				resolution: String,
+
+			},
+
+			toggle: function() {
 				if (this.$.adcollapse.opened) {
 					this.$.advancedSettings.style.height='35px';
 					
