--- a/src/components/editor/aq-editor-toolbar.html
+++ b/src/components/editor/aq-editor-toolbar.html
@@ -1,17 +1,11 @@
 <link rel="import" href="../../../bower_components/paper-toolbar/paper-toolbar.html">
 
-<link rel="import" href="../../../bower_components/vaadin-icons/vaadin-icons.html">
-<link rel="import" href="../../../bower_components/iron-icons/editor-icons.html">
-<link rel="import" href="../../../bower_components/iron-icons/av-icons.html">
-
-<link rel="import" href="../../../bower_components/paper-input/paper-input.html">
-<link rel="import" href="../../../bower_components/paper-input/paper-input-container.html">
-<link rel="import" href="../../../bower_components/paper-button/paper-button.html">
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
+<link rel='import' href='../../icons/aq-iconset.html'>
 
 
 <dom-module id='aq-editor-toolbar'>
-	<style is="custom-style" include="iron-flex iron-positioning"></style>
+	<style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning"></style>
 
 	<style>
 
@@ -36,10 +30,6 @@
 		  --paper-toolbar-color:teal;
   		  --paper-toolbar-background:#e5f1f5;--#dadde9; --#ebeff1; --#f1e091;
   		  --border-right: 5px solid #333a56;
-		}
-
-		paper-button {
-			height:35px;
 		}
 
 		#strategyName, #box {
@@ -109,26 +99,26 @@
 	<template>
 		<paper-toolbar>
 			<div id='toolbar' class="flex layout horizontal">
-				<paper-icon-button noink id='back-icon' class="flex toolbarIcon" icon="icons:arrow-back" title="Go Back" on-tap='goBack'></paper-icon-button>
+				<paper-icon-button noink id='back-icon' class="flex toolbarIcon" icon="aq-icons:arrow-back" title="Go Back" on-tap='goBack'></paper-icon-button>
 				<input class="flex" id ='strategyName' value="[[strategyName]]" type="text">
 	     		 
 	        	<div class="flex" style="max-width:5%"></div>
 
-	        	<paper-icon-button noink class="flex toolbarIcon" icon="icons:code" title="Toggle Code/Design" on-tap='toggleDesign'></paper-icon-button>
+	        	<!--paper-icon-button noink class="flex toolbarIcon" icon="aq-icons:code" title="Toggle Code/Design" on-tap='toggleDesign'></paper-icon-button-->
 
 	        	<span class="self-center separator"></span>
-		 		<paper-icon-button noink class="flex toolbarIcon" icon="icons:save" title="Save" on-tap='onSave'></paper-icon-button>	
-		 		<paper-icon-button noink class="flex toolbarIcon" icon="icons:add" title="New" on-tap='onCreate'></paper-icon-button>	
-		 		<paper-icon-button noink class="flex toolbarIcon" icon="icons:content-copy" title="Clone" on-tap='onClone'></paper-icon-button>
+		 		<paper-icon-button noink class="flex toolbarIcon" icon="aq-icons:save" title="Save" on-tap='onSave'></paper-icon-button>	
+		 		<paper-icon-button noink class="flex toolbarIcon" icon="aq-icons:add" title="New" on-tap='onCreate'></paper-icon-button>	
+		 		<paper-icon-button noink class="flex toolbarIcon" icon="aq-icons:content-copy" title="Clone" on-tap='onClone'></paper-icon-button>
 		 		
 		 		<span class="self-center separator"></span>
 	
-		 		<paper-icon-button id='runButton' noink class="flex self-center toolbarPlayIcon" icon="av:play-arrow" title="Run Backtest" on-tap='onRun'></paper-icon-button>
+		 		<paper-icon-button id='runButton' noink class="flex self-center toolbarPlayIcon" icon="aq-icons:play-arrow" title="Run Backtest" on-tap='onRun'></paper-icon-button>
 
 	        	<template is='dom-if' if="{{isProgrammer}}">
 	        		<template is='dom-if' if='[[narrow]]'>
 		            <div class="flex"></div>
-		            <paper-icon-button noink class="toolbarIcon" icon="vaadin-icons:split-h" title="Toggle-Left" on-tap="toggleDrawer"></paper-icon-button>
+		            <paper-icon-button noink class="toolbarIcon" icon="aq-icons:split-h" title="Toggle-Left" on-tap="toggleDrawer"></paper-icon-button>
 		            </template>
 		           
 		        </template>
@@ -156,52 +146,52 @@
 				strategyId:String,
 			},
 
-			closeAll() {
+			closeAll: function() {
 				this.fire('close-all');
 			},
 
-			openDrawer() {
+			openDrawer: function() {
 				this.fire('open-drawer');
 			},
 
-			closeDrawer() {
+			closeDrawer: function() {
 				this.fire('close-drawer');
 			},
 
-			toggleDrawer() {
+			toggleDrawer: function() {
 				this.fire('toggle-drawer');
 			},
 
-			toggleConsole() {
+			toggleConsole: function() {
 				this.fire('toggle-console');
 			},
 
-			toggleDesign(){
+			toggleDesign: function(){
 				this.fire('toggle-design');
 			},
 
-			goBack() {
+			goBack: function() {
         		this.fire('backClicked');
 			},
 
-			goToAnalyze() {
+			goToAnalyze: function() {
 				this.fire('analyze-clicked');
 			},
 
-			onSave() {
+			onSave: function() {
 				this.strategyName = this.$.strategyName.value;
 				this.fire('save-action',{name:this.strategyName});
 			},
 
-			onCreate() {
+			onCreate: function() {
 				this.fire('newClicked');
 			},
 
-			onClone() {	
+			onClone: function() {	
 				this.fire('cloneClicked');	
 			},
 
-			onRun() {
+			onRun: function() {
 				this.strategyName = this.$.strategyName.value;
 				this.fire('run-action',{name:this.strategyName});
 			}
