--- a/src/layouts/aq-analyze-main.html
+++ b/src/layouts/aq-analyze-main.html
@@ -1,6 +1,3 @@
-<link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
-<link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel='import' href='../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 <link rel='import' href='../../bower_components/app-router/app-router.html'>
 
@@ -8,8 +5,10 @@
 <link rel="import" href="../components/analyze/aq-analyze-compare.html">
 <link rel="import" href="../components/analyze/aq-analyze-compare-results.html">
 
+<link rel="import" href="../components/analyze/aq-analyze-detail.html">
+
 <dom-module id="aq-analyze-main">
-  <style is="custom-style" include="iron-flex iron-positioning"></style>
+  <style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning"></style>
    <style>
     #panel {
       height:100%;
@@ -25,6 +24,8 @@
         <app-route path="/dashboard/analyze/compare/x" element='aq-analyze-compare-results' bindrouter=""></app-route>
 
         <app-route path="/dashboard/analyze/:strategyId" element='aq-analyze-home' bindrouter=""></app-route>
+
+        <app-route path="/dashboard/analyze/:strategyId/*" element='aq-analyze-detail' bindrouter="" onUrlUpdate=""></app-route>
 
     </app-router>
   </template>
